# rust-rest-api

./: Cargo.toml  LICENSE
src/: main.rs
src/config/: db.rs
src/delivery/http/: account.rs  ping.rs
src/models/: response.rs  user.rs
