[package]
name = "rust-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
diesel_migrations = "2.0.0"
actix-service = "2.0.2"
actix-cors = "0.6.4"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"

[dependencies.diesel]
version = "2.0.3"
features = ["postgres", "r2d2", "chrono"]

[dev-dependencies.diesel]
version = "2.0.3"
features = ["sqlite", "r2d2", "chrono"]
